<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="15dp"
    tools:context=".admin.MainActivityAdmin">

    <LinearLayout
        android:id="@+id/greetingUser"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/greetingTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/greetings"
            android:textSize="25sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/textUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nameUser"
            android:layout_marginStart="5dp"
            android:textSize="25sp"
            android:textStyle="bold"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layuotNav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greetingUser"
        android:padding="15dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        >

    <LinearLayout
        android:id="@+id/layoutBuku"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/greetingUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="35dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center_vertical"
        android:padding="15dp"
        android:background="@drawable/notif_card"
        android:backgroundTint="@color/tosca"
        >

        <TextView
            android:id="@+id/totalBuku"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kosong"
            android:textSize="55sp"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buku"
            android:textSize="65sp"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutGenre"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/layoutBuku"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="35dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:padding="15dp"
        android:gravity="center_vertical"
        android:background="@drawable/notif_card"
        android:backgroundTint="@color/lightYellow"
        >

        <TextView
            android:id="@+id/totalGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kosong"
            android:textSize="55sp"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre"
            android:textSize="65sp"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutUser"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/layoutGenre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="35dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:padding="15dp"
        android:gravity="center_vertical"
        android:background="@drawable/notif_card"
        android:backgroundTint="@color/lightPurle"
        >

        <TextView
            android:id="@+id/totalUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kosong"
            android:textSize="55sp"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:textSize="65sp"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            />
    </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textSize="30sp"
            android:padding="15dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/red"
            app:cornerRadius="12dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>