<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="30dp"
        android:scaleType="centerInside"
        android:src="@drawable/logo_light"
        />

    <TextView
        android:id="@+id/titleLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SignIn"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <LinearLayout
        android:id="@+id/layoutInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_marginTop="55dp"
        app:layout_constraintTop_toBottomOf="@+id/titleLogin"
        >


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtfield1"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/labelUsername"
            app:hintEnabled="false"
            >
            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/Username"
                android:autofillHints="username"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:background="@drawable/rounded_edittext"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:id="@+id/txtfield2"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@+id/labelPassword">
            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nama"
                android:autofillHints="name"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:background="@drawable/rounded_edittext"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:id="@+id/txtfield3"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@+id/labelPassword">
            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Email"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:background="@drawable/rounded_edittext"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:id="@+id/txtfield4"
            app:hintEnabled="false"
            app:counterMaxLength="12"
            app:layout_constraintTop_toBottomOf="@+id/labelPassword">
            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Password"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:background="@drawable/rounded_edittext"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:id="@+id/link"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/labelTextLogin"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textSignIn"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/linkSignIn"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Login"
                android:textSize="20sp"
                android:textStyle="bold"
                />

        </LinearLayout>



    </LinearLayout>

    <!--        <Button-->
    <!--            android:id="@+id/btnLogin"-->
    <!--            app:layout_constraintStart_toStartOf="parent"-->
    <!--            app:layout_constraintEnd_toEndOf="parent"-->
    <!--            app:layout_constraintTop_toBottomOf="@+id/layoutInput"-->
    <!--            android:layout_width="200dp"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:text="@string/Login"-->
    <!--            android:textSize="30sp"-->
    <!--            android:padding="15dp"-->
    <!--            android:textColor="@color/white"-->
    <!--            android:backgroundTint="@color/black"-->
    <!--            android:background="@drawable/square_button"-->
    <!--            />-->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutInput"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/SignIn"
        android:textSize="30sp"
        android:padding="15dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        app:cornerRadius="12dp" />





</androidx.constraintlayout.widget.ConstraintLayout>